--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
 }
 
 def hilt_version = "2.40.1"
-def lifeCycleVersion = "2.3.1"
+def lifeCycleVersion = "2.4.1"
 def kotlinCoroutinesVersion = "1.5.1"
 def GsonVersion = "2.8.7"
 def glideVersion = "4.11.0"
@@ -81,8 +81,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
 
     // LifeCycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifeCycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifeCycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifeCycleVersion"
+
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
